snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.pom.sha512
9cf4ea72dd1fa9b8532c665349181dd40a884374f80d9b70a5134ae5331f140cc3b68f7518dc71b38f6aacdf6ce1c458b2616bd8013d1c04a5493d7234d83169